# peak2vec

./: .env.example  README.md  pyproject.toml
configs/: pbmc10k.yaml  pbmc10k_farm.yaml  peak2vec.yaml  peak2vec_baseline.yaml  peak2vec_test.yaml
notebooks/: cell_embeddings.ipynb  eda.ipynb  evaluation.ipynb  peak2vec.ipynb  peak2vec_old.ipynb  preprocessing.ipynb  train.ipynb  visualise.ipynb
scripts/: profile_dataset.py
src/peak2vec/: __init__.py  cli.py  config.py  dataset.py  preprocess.py  preprocessing.py  trainer.py  visualize.py
src/peak2vec/models/: __init__.py  peak2vec.py
src/peak2vec/utils/: device.py  io.py  seed.py
