[project]
name = "peak2vec"
version = "0.1.0"
description = "peak2vec experiments for scATAC / Multiome"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anndata>=0.10",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "wandb>=0.19",
  "torch>=2.9.1",
  "scanpy>=1.11.5",
  "muon>=0.1.7",
  "jupyter>=1.1.1",
  "ipywidgets>=8.1.8",
  "torch>=2.9.1",
  "igraph>=1.0.0",
]

[project.scripts]
peak2vec = "peak2vec.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peak2vec"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
